--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -30,5 +30,6 @@
         <li>Heat oven to 350 degrees. Combine your ricotta, eggs, pecorino romano, parsley and mozzarerlla.</li>
         <li>Eat you pig.</li>
     </ol>
+    <p>Sourced from <a href="https://cooking.nytimes.com/recipes/9530-lasagna">this</a> New York Times article.</p>
 </body>
 </html>
