added credit to spaghetti and nav to Lasagna

--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -31,5 +31,8 @@
         <li>Eat you pig.</li>
     </ol>
     <p>Sourced from <a href="https://cooking.nytimes.com/recipes/9530-lasagna">this</a> New York Times article.</p>
+    <a href="./lasagna.html">Back To Top</a>
+    <br>
+    <a href="../index.html">Table of Contents</a>
 </body>
 </html>
