--- a/pages/spaghetti.html
+++ b/pages/spaghetti.html
@@ -33,6 +33,7 @@
         <li>Season with oregano, basil, salt, and pepper.</li>
         <li>Simmer spaghetti sauce for 1 hour, stirring occasionally.</li>
     </ol>
+    <p>Sourced from <a href="https://www.allrecipes.com/recipe/158140/spaghetti-sauce-with-ground-beef/">this</a></p>
     <a href="./spaghetti.html">Back To Top</a>
     <br>
     <a href="../index.html">Table of Contents</a>
